Fix footer widget default spacing

--- a/assets/css/widget-areas.css
+++ b/assets/css/widget-areas.css
@@ -2,7 +2,7 @@
 ## Footer Widgets
 --------------------------------------------------------------*/
 .footer-widgets {
-	padding: 50px;
+	padding: 40px;
 }
 
 .inside-footer-widgets {
@@ -14,11 +14,11 @@
 }
 
 .site-footer .footer-widgets-container .inner-padding {
-	padding: 0px 0px 0px 50px;
+	padding: 0px 0px 0px 40px;
 }
 
 .site-footer .footer-widgets-container .inside-footer-widgets {
-	margin-left: -50px;
+	margin-left: -40px;
 }
 
 /*--------------------------------------------------------------
@@ -207,6 +207,9 @@ div.top-bar .widget {
 	--------------------------------------------------------------*/
 	.inside-footer-widgets {
 		flex-direction: column;
+	}
+	.inside-footer-widgets > div:not(:last-child) {
+		margin-bottom: 40px;
 	}
 	.site-footer .footer-widgets .footer-widgets-container .inside-footer-widgets {
 		margin: 0;
